<resources>
    <string name="app_name">Clowyer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Registrar</string>
    <string name="login">Ingresar</string>
    <string name="mail">Correo</string>
    <string name="password">Contraseña</string>
    <string name="identification">Cedula</string>
    <string name="name">Nombre</string>
    <string name="speciality">Especialidad</string>
    <string name="phone">Telefono</string>
    <string name="toolbar_title_register">Crear Cuenta</string>
    <string name="slogan">Tus casos en la nube</string>
    <string name="Cases">Casos</string>
    <string name="Clients">Clientes</string>
    <string name="Courts">Juzgados</string>
    <string name="Account">Cuenta</string>
    <string name="login_error">Error al iniciar sesion.</string>
    <string name="Image">Imagen</string>
    <string name="tel_abbreviation">Tel: </string>
    <string name="number_abbreviation">No: </string>
    <string name="load_data_message">Cargando Datos</string>
    <string name="rights_message">Todos los derechos reservados.</string>
    <string name="error_loading_docs">Error cargando Documentos</string>
    <string name="complete_fields">Complete todos los campos</string>
    <string name="select_image">Seleccionar Imagen</string>
    <string name="ocr_error">Error procesando img</string>
    <string name="error_loaded_img">No se ha cargado ninguna imagen</string>
    <string name="length_password">La contraseña debe tener al menos 5 caracteres</string>
    <string name="client_title">Cliente</string>
    <string name="legal">Juridico</string>
    <string name="natural">Natural</string>
    <string name="birth_date">Fecha de Nacimiento</string>
    <string name="opcional_phone">Telefono (Opcional)</string>
    <string name="create">Crear</string>
    <string name="toolbar_title_create_client">Crear cliente</string>
    <string name="create_account_succesfull">Cuenta creada exitosamente.</string>
    <string name="create_account_error">Error al crear cuenta.</string>
    <string name="register_error">Error al registrar</string>
    <string name="loading_data_txt">Cargando casos ...</string>
</resources>
